--- a/birdview/birdview/en.lproj/MainStoryboard.storyboard
+++ b/birdview/birdview/en.lproj/MainStoryboard.storyboard
@@ -60,8 +60,7 @@
                     <navigationItem key="navigationItem" title="Master" id="36">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="fyO-pF-YzF">
                             <connections>
-                                <action selector="addbird:" destination="12" id="PQ8-Kp-1lf"/>
-                                <segue destination="KLa-1W-vQN" kind="modal" identifier="ShowAddSightingView" id="Fwv-su-OLR"/>
+                                <action selector="addbird:" destination="12" id="syz-NS-J5q"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -195,6 +194,34 @@
                                             <constraint firstItem="z07-wV-IV5" firstAttribute="baseline" secondItem="5Yv-s6-6nU" secondAttribute="baseline" type="default" id="cGT-0Q-KpG"/>
                                         </constraints>
                                     </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="266" id="2z5-60-h1U">
+                                        <rect key="frame" x="0.0" y="110" width="320" height="266"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="265"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Picture " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q8D-Zc-c3d">
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Qi-Y5-m0k">
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="205" id="yfP-uy-UW8"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="Q8D-Zc-c3d" firstAttribute="centerX" secondItem="6Qi-Y5-m0k" secondAttribute="centerX" type="default" id="2ro-5m-oB3"/>
+                                            <constraint firstAttribute="trailing" secondItem="6Qi-Y5-m0k" secondAttribute="trailing" constant="20" type="default" id="ROT-Mw-VFt"/>
+                                            <constraint firstItem="6Qi-Y5-m0k" firstAttribute="top" secondItem="2z5-60-h1U" secondAttribute="top" constant="20" type="default" id="leN-Aj-oAb"/>
+                                            <constraint firstItem="6Qi-Y5-m0k" firstAttribute="leading" secondItem="2z5-60-h1U" secondAttribute="leading" constant="20" type="default" id="m7m-nN-mUm"/>
+                                            <constraint firstAttribute="bottom" secondItem="Q8D-Zc-c3d" secondAttribute="bottom" constant="21" id="nd8-4U-hiZ"/>
+                                        </constraints>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -218,6 +245,7 @@
                     <connections>
                         <outlet property="LocationInput" destination="5Yv-s6-6nU" id="Bv4-Oh-dMf"/>
                         <outlet property="birdNameInput" destination="azu-y0-62b" id="9gf-oy-Rrd"/>
+                        <outlet property="imageview" destination="6Qi-Y5-m0k" id="qUr-E6-cQ3"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XTY-k2-YZs" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -425,6 +453,48 @@
             <point key="canvasLocation" x="613" y="-735"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="AddSightingViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AddSightingViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancel:"/>
+                <relationship kind="action" name="done:"/>
+                <relationship kind="outlet" name="LocationInput" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="birdNameInput" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="imageview" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+        <class className="CameraViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CameraViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="CameraRoll:"/>
+                <relationship kind="action" name="cancel:"/>
+                <relationship kind="action" name="next:"/>
+                <relationship kind="action" name="usecamera:"/>
+                <relationship kind="outlet" name="imageview" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+        <class className="DetailViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/DetailViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="getCurrentLocation:"/>
+                <relationship kind="outlet" name="birdNameLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="dateLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="latitudeLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="locationLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="longtitudeLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="MasterViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MasterViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="addbird:"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
